--- a/account.html
+++ b/account.html
@@ -33,7 +33,8 @@ http://www.templatemo.com/tm-475-holiday
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="hire.html">Hire</a></li>
-							<li><a href="bonus.html" class="active">Bonus</a></li>
+							<li><a href="account.html" class="active">Account</a></li>
+							<li><a href="bonus.html">Bonus</a></li>
 							<li><a href="about.html">About</a></li>
 						</ul>
 					</nav>		
